# clean-browser

./: .copier-answers.yml  .env-example  .envrc  .envrc-example  .gitignore  .tool-versions  CHANGELOG.md  Justfile  README.md  TODO  archive.py  blacklist_domains.txt  blacklist_urls.txt  mise.toml  playground.py  pyproject.toml
.github/: build_and_publish.yml  dependabot.yml
.github/workflows/: build_and_publish.yml  repo-sync.yml  trunk-check.yml
.trunk/: trunk.yaml
clean_workspace/: __init__.py  ai.py  archive.py  blacklist_domains.txt  patch.py  utils.py
playground/: archive.py
tests/: __init__.py  test_archive.py  test_import.py
