[tool.poetry]
name = "clean-workspace"
version = "0.6.3"
description = "Collect all browser URLs, output to terminal, and archive to todoist. Useful for cleaning up your workspace at the end of the day, without loosing important urls."
authors = ["Mike Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/iloveitaly/clean-browser"
keywords = ["todoist", "browser", "productivity"]

[tool.poetry.dependencies]
python = "^3.10"
pyobjc-framework-ScriptingBridge = "^10.1"
todoist-api-python = "^2.1.3"
chrome-bookmarks = "^2020.10.25"
click = "^8.1.7"
backoff = "^2.2.1"

[tool.poetry.scripts]
clean-workspace = "clean_workspace:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
