[project]
name = "clean-workspace"
version = "0.8.1"
description = "Collect all browser URLs, output to terminal, and archive to todoist. Useful for cleaning up your workspace at the end of the day, without loosing important urls."
keywords = ["todoist", "browser", "productivity"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-framework-ScriptingBridge>=10.3.1",
    "todoist-api-python>=3.0.0",
    "chrome-bookmarks>=2020.10.25",
    "click>=8.1.7",
    "backoff>=2.2.1",
]
authors = [{ name = "Mike Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/clean-browser" }
license = { text = "MIT" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
clean-workspace = "clean_workspace:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = ""

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["clean_workspace"]

[tool.coverage.report]
fail_under = 0

[tool.ruff]
line-length = 120
extend-exclude = ["playground.py", "playground/"]
